--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -9,6 +9,8 @@
               <p class="announcement-bar__message h5">
                 {{ block.settings.text | escape }}
                 {%- if block.settings.link != blank -%}
+
+                  
                   {% render 'icon-arrow' %}
                 {%- endif -%}
               </p>
@@ -32,7 +34,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our store",
+          "default": "Welcome to our asdasd ",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
