--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -34,7 +34,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our asdasd ",
+          "default": "Welcome to our asdasdasfd ",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
