--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -23,7 +23,6 @@
 {%- endfor -%}
 
 {% schema %}
-{
   "name": "t:sections.announcement-bar.name",
   "max_blocks": 12,
   "blocks": [
@@ -34,7 +33,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our asdasdasfd ",
+          "default": "Welcome to our a ",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
