--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -33,7 +33,7 @@
         {
           "type": "text",
           "id": "text",
-          "default": "Welcome to our ab ",
+          "default": "Welcome to our store ",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
         },
         {
