--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -10,7 +10,7 @@
                 {{ block.settings.text | escape }}
                 {%- if block.settings.link != blank -%}
 
-                  asdasd
+                  asdasdasdasdasd
                   {% render 'icon-arrow' %}
                 {%- endif -%}
               </p>
