--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -15,7 +15,7 @@
                 {%- endif -%}
               </p>
           {%- if block.settings.link != blank -%}
-            </a>
+            </a>sdfdsf
           {%- endif -%}
         {%- endif -%}
       </div>
