--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -9,7 +9,7 @@
               <p class="announcement-bar__message h5">
                 {{ block.settings.text | escape }}
                 {%- if block.settings.link != blank -%}
-asd213123asdas
+asd213123asdasewrtewt
                   {% render 'icon-arrow' %}
                 {%- endif -%}
               </p>
