--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -12,6 +12,7 @@
 asd213123asdasewrtewtsafsdasdfsdf
 sdfsdf
                   {% render 'icon-arrow' %}
+                  sdfsdf
                 {%- endif -%}
               </p>
           {%- if block.settings.link != blank -%}
