--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -9,7 +9,10 @@
               <p class="announcement-bar__message h5">
                 {{ block.settings.text | escape }}
                 {%- if block.settings.link != blank -%}
-
+fcb srhsefdgbdfgdfgdfgdfgdfg
+srhsefdgbdfgdfgdfgdfgdfgsdf
+sdfdsfsdf
+sdf
                   asdasd
                   {% render 'icon-arrow' %}
                 {%- endif -%}
