--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -9,8 +9,12 @@
               <p class="announcement-bar__message h5">
                 {{ block.settings.text | escape }}
                 {%- if block.settings.link != blank -%}
-asd213123asdasewrtewtsafsdasdfsdf
-sdfsdf
+sdfds fass20f6 +sd0f5 6+dsfsd 
+fsd fass20f6 adsf 
+sdfdsf sd
+f 
+sdfdsf sd 
+ fass20f6sdf 
                   {% render 'icon-arrow' %}
                   sdfsdf
                 {%- endif -%}
