--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -13,6 +13,9 @@ fcb srhsefdgbdfgdfgdfgdfgdfg
 srhsefdgbdfgdfgdfgdfgdfgsdf
 sdfdsfsdf
 sdf
+asdasdasd
+asdasdasdasd
+asdasdasdasdasd
                   asdasd
                   {% render 'icon-arrow' %}
                 {%- endif -%}
